--- a/project01.html
+++ b/project01.html
@@ -17,7 +17,7 @@
             <h1 id="horario"></h1>
         </div>
         <div id="foto">
-            <img id="imagem" src="/project01/images/dia.jpg" alt="dia">
+            <img id="imagem" src="dia.jpg" alt="dia">
         </div>
         
     </section>
